2002-04-18  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/move_resize.c (move_window_doit):
	set the is_icon_moved too flag if the icon was moved non-interactively

2002-04-15  Dominik Vogt  <dominik.vogt@gmx.de>

	* libs/Bindings.c (CheckBinding):
	(MatchBinding):
	(MatchBindingExactly):
	(GrabWindowKey):
	(GrabWindowButton):
	patch by yeti@physics.muni.cz to help with a weird problem w/ czech
	keyboards

2002-04-11  Mikhael Goikhman  <migo@homemail.com>

	* NEWS:
	* configure.in:
	changed to 2.4.8

2002-04-11  Mikhael Goikhman  <migo@homemail.com>

	* NEWS:
	* docs/ANNOUNCE:
	* docs/fvwm.lsm.in:
	* fvwm/fvwm2.1:
	updated for 2.4.7

2002-04-10  Mikhael Goikhman  <migo@homemail.com>

	* libs/System.c:
	* NEWS:
	added #include <sys/select.h> to fix endless loop on QNX

2002-04-10  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/fvwm2.1:
	changed description of focus models

2002-03-24  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (HandleEnterNotify):
	fixed icons being raised right after iconification when done without the
	mouse and via a function

2002-03-16  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/fvwm2.1:
	corrected some typos

2002-03-13  Mikhael Goikhman  <migo@homemail.com>

	* acconfig.h:
	* NEWS:
	fixed an empty statement ";" warning with some compilers

2002-03-12  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/windowlist.c (CMD_WindowList):
	fixed parsing of conditions versus position of window list broken with
	a recent "fix"

2002-03-10  Dominik Vogt  <dominik.vogt@gmx.de>

	* configure.in:
	changed to 2.4.7

	* fvwm/fvwm2.1:
	Corrected the description of the XineramaPrimaryScreen command that was
	essentially lying.

	* NEWS:
	updated for 2.4.6

2002-03-07  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.c (pop_menu_up):
	fixed a menu placement bug w/ xinerama

2002-03-07  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/bindings.c (ParseBinding): Handle keysym lengths up to 30.

2002-03-06  Dominik Vogt  <dominik.vogt@gmx.de>
