@@ -6,6 +6,21 @@ This file details only configuration options peculiar to FVWM.  Please
 read the generic instructions in INSTALL first.
 
 
+New!
+====
+
+We are in the process of moving from the fvwm2 executable name to the
+fvwm name.  This completes the process that was started in 2.1.0.
+
+In this 2.4.8+ release we setup symbolic links from fvwm to fvwm2 for
+the executable and the man page.  In the 2.5.x series it is vice versa,
+the main name is fvwm, but fvwm2 symlink is supported for some time.
+
+To install fvwm2 executable without 2 additional symlinks, specify:
+
+  % make install FORWARD_COMPAT_NAME=false
+
+
 Important Note!
 ===============
 
